--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -43,6 +43,13 @@
 			<artifactId>guava</artifactId>
 			<version>32.1.3-jre</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+<!--			<version>3.1.5</version>-->
+		</dependency>
+
 
 	</dependencies>
 	<dependencyManagement>
