--- a/ApiGateway/pom.xml
+++ b/ApiGateway/pom.xml
@@ -52,9 +52,15 @@
 			<version>0.12.3</version>
 			<scope>runtime</scope>
 		</dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-webmvc</artifactId>-->
+<!--        </dependency>-->
 
 
-	</dependencies>
+
+
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
