--- a/NotificationService/src/main/resources/application.properties
+++ b/NotificationService/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=notification-service
 server.port=8080
 
 spring.data.mongodb.database=notification
-spring.data.mongodb.uri=mongodb+srv://64070142:Natayos@notification.fcqj9g0.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://64070142:Natayos@notification.rxln3qs.mongodb.net/?retryWrites=true&w=majority
 spring.main.allow-bean-definition-overriding=true
